# audit-hunter

./: .gitignore  README.md  pyproject.toml
audit_hunter/: __init__.py  assessment.py  cli.py  combine.py  threat_model.py
audit_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
audit_hunter/schemas/: audit_report.schema.json
audit_hunter_common/: __init__.py  paths.py  reporting.py
secret_hunter/: __init__.py  ai.py  cli.py  parsers.py  redaction.py  scanner.py
secret_hunter/schemas/: secret_report.schema.json
secret_hunter/tests/: test_secret_hunter.py
tests/: test_audit_hunter_master.py
threat-model/: SKILL.md
threat-model/agents/: openai.yaml
vuln-hunter/: .env.example  LICENSE  README.md  pyproject.toml
vuln-hunter/.audit-hunter/: security-config.json  threat-model.md
vuln-hunter/audit/: __init__.py  __main__.py  auth.py  campaign.py  cli.py  config.py  json_utils.py  orchestrator.py  runner.py  state.py
vuln-hunter/config/: stages.claude.yaml  stages.yaml
vuln-hunter/docs/: models.md
vuln-hunter/prompts/: 01-recon.md  02-hunt.md  03-validate.md  04-gapfill.md  05-dedupe.md  06-trace.md  07-feedback.md  08-report.md
vuln-hunter/schemas/: dedupe_output.schema.json  feedback_output.schema.json  finding.schema.json  gapfill_output.schema.json  hunt_task.schema.json  recon_output.schema.json  report.schema.json  trace.schema.json  validation.schema.json
vuln-hunter/tests/: test_auth.py  test_campaign.py  test_cli.py  test_config.py  test_json_utils.py  test_orchestrator.py  test_runner_codex.py  (+4 more)
(+10 files in other folders)
