[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audit-hunter"
version = "0.1.0"
description = "Shared audit-hunter entrypoints and secret scanning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "jsonschema>=4.21",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
audit-hunter = "audit_hunter.cli:main"
secret-hunter = "secret_hunter.cli:main"

[tool.setuptools.packages.find]
include = ["audit_hunter*", "audit_hunter_common*", "secret_hunter*"]

[tool.setuptools.package-data]
audit_hunter = ["schemas/*.schema.json"]
secret_hunter = ["schemas/*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests", "secret_hunter/tests"]
